Add custom props, fonts and body props

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,85 @@
+/* FONTS */
+
+@font-face {
+  font-family: 'Livvic';
+  src: url('../fonts/Livvic-SemiBold.eot');
+  src: url('../fonts/Livvic-SemiBold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Livvic-SemiBold.woff2') format('woff2'),
+    url('../fonts/Livvic-SemiBold.woff') format('woff'),
+    url('../fonts/Livvic-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Livvic';
+  src: url('../fonts/Livvic-SemiBoldItalic.eot');
+  src: url('../fonts/Livvic-SemiBoldItalic.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Livvic-SemiBoldItalic.woff2') format('woff2'),
+    url('../fonts/Livvic-SemiBoldItalic.woff') format('woff'),
+    url('../fonts/Livvic-SemiBoldItalic.ttf') format('truetype');
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Livvic';
+  src: url('../fonts/Livvic-Bold.eot');
+  src: url('../fonts/Livvic-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Livvic-Bold.woff2') format('woff2'),
+    url('../fonts/Livvic-Bold.woff') format('woff'),
+    url('../fonts/Livvic-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Livvic';
+  src: url('../fonts/Livvic-Regular.eot');
+  src: url('../fonts/Livvic-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Livvic-Regular.woff2') format('woff2'),
+    url('../fonts/Livvic-Regular.woff') format('woff'),
+    url('../fonts/Livvic-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Livvic';
+  src: url('../fonts/Livvic-MediumItalic.eot');
+  src: url('../fonts/Livvic-MediumItalic.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Livvic-MediumItalic.woff2') format('woff2'),
+    url('../fonts/Livvic-MediumItalic.woff') format('woff'),
+    url('../fonts/Livvic-MediumItalic.ttf') format('truetype');
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+}
+
+
+
+/* CUSTOM PROPS */
+
+:root {
+  --body-bg: rgb(1, 78, 86);
+  --light-coral: rgb(246, 126, 126);
+  --white-color: rgb(255, 255, 255);
+  --rapture-blue: rgb(121, 200, 199);
+  --police-blue: rgb(44, 98, 105);
+  --deep-jungle-green: rgb(0, 64, 71);
+  --sacramento-green: rgb(1, 47, 52);
+  --dark-green: rgb(0, 37, 41);
+  --font-family: Livvic, Arial, sans-serif;
+}
+
+
+
+/* GLOBAL STYLES */
+
 html {
   box-sizing: border-box;
   height: 100%;
@@ -16,11 +98,12 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #222;
+  font-family: var(--font-family);
+  font-size: 15px;
+  line-height: 25px;
+  font-weight: 600;
+  background-color: var(--body-bg);
+  color: var(--white-color);
 }
 
 img {
