--- a/css/styles.css
+++ b/css/styles.css
@@ -159,11 +159,130 @@ select:-webkit-autofill:focus {
   margin-right: auto;
 }
 
+/* LOGO */
+.logo {
+  margin-right: 40px;
+}
+
+.logo:hover {
+  opacity: 0.8;
+}
+
+.logo:active {
+  opacity: 0.6;
+}
+
+/* BUTTONS */
+
+.button {
+  display: inline-block;
+  padding: 9px 32px 11px 33px;
+  border: 2px solid var(--white-color);
+  border-radius: 24px;
+  color: var(--white-color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+.button:hover {
+  background-color: var(--white-color);
+  color: #002529;
+}
+
+.button:active {
+  opacity: 0.8;
+}
+
+
+
+
+
+
 
 /* MAIN CONTENT */
 .main-content {
   flex-grow: 1;
 }
+
+
+/* SITE HEADER */
+
+.site-header {
+  padding: 73px 0;
+}
+
+.site-header__container {
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+}
+
+
+.site-header__logo {
+  display: flex;
+  white-space: nowrap;
+  margin-right: 80px;
+}
+
+.logo__img {
+  width: 160px;
+  height: 40px;
+}
+
+.sitenav__list {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sitenav__item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.sitenav__link {
+  display: block;
+  text-decoration: none;
+  color: var(--white-color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+}
+
+.sitenav__link:hover {
+  color: var(--light-coral);
+}
+
+.sitenav__link:active {
+  opacity: 0.8;
+}
+
+.site-header__button {
+  margin-left: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* RETINA BACKGROUNDS */
