custom props rgb color values converted to hex values

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,14 +65,14 @@
 /* CUSTOM PROPS */
 
 :root {
-  --body-bg: rgb(1, 78, 86);
-  --light-coral: rgb(246, 126, 126);
-  --white-color: rgb(255, 255, 255);
-  --rapture-blue: rgb(121, 200, 199);
-  --police-blue: rgb(44, 98, 105);
-  --deep-jungle-green: rgb(0, 64, 71);
-  --sacramento-green: rgb(1, 47, 52);
-  --dark-green: rgb(0, 37, 41);
+  --body-bg: #014e56;
+  --light-coral: #f67e7e;
+  --white-color: #ffffff;
+  --rapture-blue: #79c8c7;
+  --police-blue: #2c6269;
+  --deep-jungle-green: #004047;
+  --sacramento-green: #012f34;
+  --dark-green: #002529;
   --font-family: Livvic, Arial, sans-serif;
 }
 
